Bug 1271899 - inspector box-model: add div wrapper to close editors on click;r=gl
The XUL tabpanel can no longer receive userfocus to avoid scrollbars
stealing the focus. Editors are using the blur event to destroy
themselves, which was no longer working if a user click ended up on
the tabpanel element.

Add a wrapper inside the layout view panel taking
100% width and height to make sure clicks performed outside of the layout
container will trigger a blur event on a focused editor.

MozReview-Commit-ID: JmZluQ6LzFl

UltraBlame original commit: b6d9770a62ab45926e146fba9871947016121f30

--- a/devtools/client/themes/layout.css
+++ b/devtools/client/themes/layout.css
@@ -17,6 +17,17 @@ auto
 #
 layout
 -
+wrapper
+{
+height
+:
+100
+%
+;
+}
+#
+layout
+-
 container
 {
 max
